[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Gameplay.gd" type="Script" id=1]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/Shadow.gd" type="Script" id=3]
[ext_resource path="res://background.jpeg" type="Texture" id=4]
[ext_resource path="res://scripts/ItemList.gd" type="Script" id=6]
[ext_resource path="res://ProgressRing.png" type="Texture" id=7]

[sub_resource type="Environment" id=1]
background_mode = 4

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0, 0, 0.780392, 0, 0, 0, 0.913725 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 128

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="camera" type="Sprite" parent="."]
position = Vector2( 320, 240 )
region_enabled = true
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 240 )
rotation = -1.57079
scale = Vector2( 4.36585, 669.43 )
texture = SubResource( 3 )
script = ExtResource( 3 )

[node name="ItemList" type="ItemList" parent="."]
visible = false
margin_left = 301.0
margin_top = 2.0
margin_right = 418.0
margin_bottom = 54.0
auto_height = true
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 839, 281 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 776.0
margin_top = 407.0
margin_right = 1276.0
margin_bottom = 907.0
rect_scale = Vector2( 0.1, 0.1 )
max_value = 200.0
value = 100.0
texture_progress = ExtResource( 7 )
fill_mode = 4
radial_initial_angle = 101.6

[node name="Label" type="Label" parent="TextureProgress"]
visible = false
margin_right = 503.0
margin_bottom = 130.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Waiting for Fishstock"
align = 1
valign = 1

[connection signal="camera_frame" from="." to="camera" method="_on_root_camera_frame"]
[connection signal="camera_ready" from="." to="camera" method="_on_root_camera_ready"]
[connection signal="game_start" from="." to="shadow" method="_on_root_game_start"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected_ImageDisplay"]
